--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ before_install:
   - docker images
   - docker run -d -p 8000:80 test:v1
   - docker ps 
+
+notifications: 
+  email: bijaypandey2000@gmail.com
